apps/routers/talos-related-routes/gitno-prod/gitno-prod-service-endpoints.yaml
kind: Service
apiVersion: v1
metadata:
  name: gitno-prod-public-ingress
  namespace: traefik-staging
spec:
  ports:
    - name: gitno-prod-http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 0
    - name: gitno-prod-https
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 0
---
kind: Endpoints
apiVersion: v1
metadata:
  name: gitno-prod-public-ingress
  namespace: traefik-staging
subsets:
- addresses:
  - ip: 10.17.12.202
  ports:
  - port: 80
    name: gitno-prod-http
  - port: 443
    name: gitno-prod-https
