apps/routers/talos-related-routes/gitno-prod/gitno-prod-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitno-prod
  namespace: traefik-staging
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`gitno-prod.hephy.pro`)
    services:
    - kind: Service
      name: gitno-prod-public-ingress
      namespace: traefik-staging
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: gitno-prod-web
  namespace: traefik-staging
spec:
  entryPoints:
  - websecure
  routes:
  - match: HostSNI(`gitno-prod.hephy.pro`)
    services:
    - name: gitno-prod-public-ingress
      namespace: traefik-staging
      port: 443
  tls:
    secretName: gitno-prod-tls
    passthrough: true
